--- a/app/src/main/res/layout/activity_time.xml
+++ b/app/src/main/res/layout/activity_time.xml
@@ -6,52 +6,92 @@
     android:layout_height="match_parent"
     tools:context=".activity.TimeActivity">
 
-    <NumberPicker
-        android:id="@+id/pickerHours"
-        style="@style/NumberPickerTime"
-        android:layout_marginEnd="16dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/pickerMinutes"
-        app:layout_constraintEnd_toStartOf="@+id/text_view_title_time"
-        app:layout_constraintHorizontal_bias="0.78"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/button_set_time"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/pickerMinutes" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/text_view_title_time"
-        style="@style/TextViewColon"
+        <FrameLayout
+            android:id="@+id/frameLayout_time_picker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/pickerMinutes"
-        app:layout_constraintEnd_toStartOf="@+id/pickerMinutes"
-        app:layout_constraintTop_toTopOf="@+id/pickerMinutes" />
+            android:layout_marginRight="16dp" />
 
-    <NumberPicker
-        android:id="@+id/pickerMinutes"
-        style="@style/NumberPickerTime"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/button_set_time"
-        app:layout_constraintEnd_toStartOf="@+id/pickerSeconds"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/text_view_time"
-        style="@style/TextViewColon"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/pickerMinutes"
-        app:layout_constraintStart_toEndOf="@+id/pickerMinutes"
-        app:layout_constraintTop_toTopOf="@+id/pickerMinutes" />
+        <!--<fragment-->
+        <!--android:name="com.citsadigital.pantallamultideportiva.fragment.TimePickerFragment"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_marginEnd="16dp"-->
+        <!--android:layout_marginRight="16dp"-->
+        <!--tools:layout="@layout/fragment_time_picker" />-->
 
-    <NumberPicker
-        android:id="@+id/pickerSeconds"
-        style="@style/NumberPickerTime"
-        app:layout_constraintBottom_toBottomOf="@+id/pickerMinutes"
-        app:layout_constraintTop_toTopOf="@+id/pickerMinutes"
-        tools:layout_editor_absoluteX="738dp" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <RadioGroup
+                android:id="@+id/radio_group_time_format"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/radio_group_title_time_format" />
+
+                <RadioButton
+                    android:id="@+id/radio_button_hours_minutes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/radio_button_hours_minutes" />
+
+                <RadioButton
+                    android:id="@+id/radio_button_minutes_seconds"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/radio_button_minutes_seconds" />
+            </RadioGroup>
+
+            <RadioGroup
+                android:id="@+id/radio_group_counting_mode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/radio_group_title_counting_mode" />
+
+                <RadioButton
+                    android:id="@+id/radio_button_ascending"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/radio_button_ascending" />
+
+                <RadioButton
+                    android:id="@+id/radio_button_descending"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/radio_button_descending" />
+            </RadioGroup>
+
+        </android.support.constraint.ConstraintLayout>
+
+
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/button_set_time"
@@ -63,82 +103,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="Horas"
-        app:layout_constraintBottom_toTopOf="@+id/view"
-        app:layout_constraintEnd_toEndOf="@+id/pickerHours"
-        app:layout_constraintStart_toStartOf="@+id/pickerHours" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="Minutos"
-        app:layout_constraintBottom_toTopOf="@+id/view"
-        app:layout_constraintEnd_toEndOf="@+id/pickerMinutes"
-        app:layout_constraintStart_toStartOf="@+id/pickerMinutes" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="Segundos"
-        app:layout_constraintBottom_toTopOf="@+id/view"
-        app:layout_constraintEnd_toEndOf="@+id/pickerSeconds"
-        app:layout_constraintStart_toStartOf="@+id/pickerSeconds" />
-
-    <View
-        android:id="@+id/view"
-        style="@style/DividerLine"
-        android:layout_width="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/pickerMinutes"
-        app:layout_constraintEnd_toEndOf="@+id/pickerSeconds"
-        app:layout_constraintStart_toStartOf="@+id/pickerHours" />
-
-    <View
-        android:id="@+id/view2"
-        style="@style/DividerLine"
-        android:layout_width="0dp"
-        app:layout_constraintEnd_toEndOf="@+id/pickerSeconds"
-        app:layout_constraintStart_toStartOf="@+id/pickerHours"
-        app:layout_constraintTop_toBottomOf="@+id/pickerMinutes" />
-
-    <RadioGroup
-        android:id="@+id/radio_group_time_format"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/pickerSeconds"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Formato de hora" />
-
-        <RadioButton
-            android:id="@+id/radio_button_hours_minutes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Horas:Minutos" />
-
-        <RadioButton
-            android:id="@+id/radio_button_minutes_seconds"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Minutos:Segundos" />
-    </RadioGroup>
 
 
 </android.support.constraint.ConstraintLayout>
