--- a/app/src/main/res/values-sw600dp/styles.xml
+++ b/app/src/main/res/values-sw600dp/styles.xml
@@ -10,4 +10,10 @@
         <item name="android:ems">12</item>
     </style>
 
+    <style name="NumberPickerTime">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:descendantFocusability">blocksDescendants</item>
+    </style>
+
 </resources>
